@@ -1,5 +1,10 @@
 = Version 0.8.0
 
+  * [API] AMQP::Header now implements #to_hash
+  * [API] AMQP::Queue#pop block now can take 1, 2 or 7 (that's right) arguments.
+          1 argument means handler is only interested in content payload
+	  2 arguments means handler is interested in headers and the content
+	  7 arguments means handlers wants all the properties get-ok (or get-empty) carries
   * [API] AMQP::Queue#purge  now takes an optional block which is fired when queue.purge-ok response arrives.
   * [API] AMQP::Queue#delete now takes an optional block which is fired when queue.delete-ok response arrives.
   * [API] AMQP::Queue#delete now accepts :nowait option.
